firebase keys changed

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_FIREBASE_API_KEY = "AIzaSyDXr56WLP2w_czbDtLbkejlb_IeGtXNwVU"
-REACT_APP_FIREBASE_AUTH_DOMAIN = "g5-influencer.firebaseapp.com"
-REACT_APP_FIREBASE_PROJECT_ID = "g5-influencer"
-REACT_APP_FIREBASE_STORAGE_BUCKET = "g5-influencer.appspot.com"
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "1076513382211"
-REACT_APP_RIREBASE_APP_ID = "1:1076513382211:web:6d914477b77227c0f2d9f6"
+REACT_APP_FIREBASE_API_KEY = "AIzaSyDfpfUB-O2VJkVMs8rjUk49HzIiANIe-QM"
+REACT_APP_FIREBASE_AUTH_DOMAIN = "react-native-app-8d9ee.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID = "react-native-app-8d9ee"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "react-native-app-8d9ee.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "782615176824"
+REACT_APP_RIREBASE_APP_ID = "1:782615176824:web:d7c62ef97b55a6be98ef8d"
