--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
-    "expo-firebase-recaptcha": "^2.3.0",
+    "expo-firebase-recaptcha": "~2.3.0",
     "expo-status-bar": "~1.4.0",
-    "firebase": "9.7.0",
+    "firebase": "9.6.11",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1291.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-webview": "^11.23.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
