--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "9.6.11",
     "moment": "^2.29.4",
     "react": "18.0.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1291.0",
     "react-native-gesture-handler": "~2.5.0",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "styled-components": "^5.3.6"
   },
